--- a/index.html
+++ b/index.html
@@ -723,10 +723,10 @@
         <div class="tabs-container">
             <div class="tabs">
                 <button class="tab active" data-year="2025">
-                    2025 <span class="tab-badge">Actual</span>
+                    2025 <span class="tab-badge">Antiguo</span>
                 </button>
                 <button class="tab" data-year="2026">
-                    2026 <span class="tab-badge">Próximo</span>
+                    2026 <span class="tab-badge">Nuevo</span>
                 </button>
             </div>
             
